--- a/Service93S/app/src/main/res/values/strings.xml
+++ b/Service93S/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Service93S</string>
-    <string name="start">Start</string>
+    <string name="start">Start Service</string>
 </resources>
