Init Data classes

--- a/InstagramTest/app/src/main/res/values/strings.xml
+++ b/InstagramTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">InstagramTest</string>
+    <string name="get_access_token">Get Access Token</string>
 </resources>
