--- a/Location1/app/src/main/res/values/strings.xml
+++ b/Location1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Location1</string>
+    <string name="my_location">My Location</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
 </resources>
