--- a/Location1/app/src/main/res/values/strings.xml
+++ b/Location1/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="my_location">My Location</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
+    <string name="request_ctivity_update">Request Update Location</string>
+    <string name="remove_ctivity_update">Remove Update Location</string>
 </resources>
