--- a/ActivityRecognition/app/src/main/res/values/strings.xml
+++ b/ActivityRecognition/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
     <string name="app_name">ActivityRecognition</string>
     <string name="activities_show">Show the activities Update</string>
+
     <string name="request_activity_update">Request Update Activities</string>
     <string name="remove_activity_update">Remove Update Activities</string>
+    <string name="in_vehicle">In a vehicale</string>
+    <string name="on_bicycle">On a bicycle</string>
+    <string name="on_foot">On foot</string>
+    <string name="running">Running</string>
+    <string name="still">Still</string>
+    <string name="tilting">Tilting</string>
+    <string name="unknown">Unknown activity</string>
+    <string name="walking">Walking</string>
+    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
+    <string name="not_connected">GoogleApiClient not yet connected. Please try again</string>
 </resources>
