--- a/Transition/TransitionDemo/app/src/main/res/values/strings.xml
+++ b/Transition/TransitionDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TransitionDemo</string>
+    <string name="transition_view">Transition View</string>
 </resources>
